syntax = "proto3";

import "common.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option csharp_namespace = "Ligric.Protobuf";

package ligric.protobuf;

service UserApis {
	rpc Save(SaveApiRequest) returns (SaveApiResponse){
	  option (google.api.http) = {
		  post: "/v1/crypto/save/"
		  body: "*"
	  };
    }

	rpc Share(ShareApiRequest) returns (ResponseResult){
	  option (google.api.http) = {
		  post: "/v1/crypto/share/"
		  body: "*"
	  };
    }

    rpc ApisSubscribe(ApiSubscribeRequest) returns (stream ApisChanged){
      option (google.api.http).get = "/v1/crypto/stream/apis";
	}
}

message Api {
	int64 id = 1;
	string name = 2;
	string publicKey = 3;
	string privateKey = 4; 
}

message ApiClient {
	int64 id = 1;
	string name = 2;
	int32 permissions = 3;
}

message SaveApiRequest {
	string name = 1;
	int64 ownerId = 2;
	string publicKey = 3;
	string privateKey = 4;
}

message SaveApiResponse {
	int64 apiId = 1;
	ResponseResult result = 2;
}

message ApiSubscribeRequest
{
	int64 userId = 1;
}

message ShareApiRequest
{
	int64 ownerId = 1;
	int64 userApiId = 2;
	string users = 3;
	int32 permissions = 4;
}

message RemoveApiRequest
{
	int64 userApiId = 1;
}

message ApisChanged {
	ApiClient api = 1;
	Action action = 2;
}
